# promptory

./: .env.example  .gitignore  .samignore  2026-02-19-071755-this-session-is-being-continued-from-a-previous-co.txt  2026-02-19-182659-implement-the-following-plan.txt  2026-02-20-110128-this-session-is-being-continued-from-a-previous-co_AFTER-TESTS.txt  2026-03-02-130020-implement-the-following-plan_12noon.txt  2026-03-02-175417-implement-the-following-plan_post_RUNBOOK.txt  2026-03-02-183538-implement-the-following-plan_SCOPED_API.txt  2026-03-02-190729-implement-the-following-plan_LINTER_FIXES.txt  2026-03-02-213223-implement-the-following-plan_REMOVE_EVALS.txt  2026-03-04-165841-implement-the-following-plan_fix-export-bug.txt  2026-03-04-174018-implement-the-following-plan_MODEL_ABSTRACT.txt  2026-03-04-185453-implement-the-following-plan_RENAME-SDK-PY.txt  2026-03-04-191707-run-ruff-check-server-sdk-py-tests_FIX-LINT-ISSUES.txt  2026-03-05-101218-implement-the-following-plan-POST_OSS_README.txt  2026-03-06-182138-implement-the-following-plan_UPDATE_AWS_DEPLOYMENT.txt  2026-03-07-074250-implement-the-following-plan_EVAL-README.txt  2026-03-07-075205-implement-the-following-plan-SERVERLESSDEPLOY_EXPLAINED--SAVE.txt  CLAUDE.md  CONTRIBUTING.md  Containerfile  EVALS_README.md  GITHUB_OAUTH_PLAN.md  JINJA2_RENDERING_README.md  LICENSE  LINTER_FIX_PLAN_1.md  LINTER_FIX_PLAN_2.md  LINTER_FIX_WEBCONTAINER_3.md  Makefile  OSS_README_PLAN.md  README.internal.md  README.md  RENAME-PROMPTDIS.md  RUFF_LINTER_ERRORs.txt  RUNBOOK.md  docker-compose.yml  pyproject.toml  requirements.txt  tmpBUMP_VERSION_PLAN.md  (+2 more)
.github/: pull_request_template.md
data/: promptdis.db-shm
infra/: 2026-03-06-092751-trying-to-deploy-to-aws-in-infra-with-sam-build_ERROR_FIXED.txt  2026-03-06-123005-trying-to-deploy-to-aws-in-infra-with-sam-build_MIDDEPLOY.txt  samconfig.toml  template.yaml
scripts/: bump-version.sh  cleanup_sessions_handler.py  deploy-serverless.sh  deploy-web.sh
sdk/: README.md  pyproject.toml
sdk-go/: 2026-02-19-125013-implement-the-following-plan.txt  README.md  cache.go  cache_test.go  client.go  client_test.go  doc.go  errors.go  go.mod  models.go  models_test.go
sdk-js/: 2026-03-04-221019-implement-the-following-plan_SDK-JS.txt  LICENSE  README.md  package-lock.json  package.json
sdk-py/: pyproject.toml
sdk-ts/: README.md  package-lock.json  package.json  tsconfig.json
sdk/src/promptdis/: __init__.py  async_client.py  cache.py  client.py  exceptions.py
sdk/src/promptory/: __init__.py  async_client.py  cache.py  client.py  exceptions.py  models.py
server/: _version.py  config.py  lambda_handler.py  main.py
templates/: prompt-evals.yml
tests/: conftest.py
web/: Containerfile  index.html  (+6 more)
(+133 files in other folders)
