[project]
name = "promptory"
version = "0.1.0"
description = "Python SDK for Promptory — Git-native LLM prompt management"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
async = ["httpx[http2]>=0.27.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/promptory"]
