[project]
name = "promptory"
version = "0.1.0"
description = "Python SDK for Promptory — Git-native LLM prompt management"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "FutureSelf", email = "eng@futureself.app"},
]
keywords = ["llm", "prompts", "prompt-management", "git", "sdk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
async = ["httpx[http2]>=0.27.0"]

[project.urls]
Homepage = "https://github.com/futureself-app/promptory"
Repository = "https://github.com/futureself-app/promptory"
Documentation = "https://github.com/futureself-app/promptory#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/promptory"]
